--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "buffer": "^6.0.3",
+    "dotenv": "^16.0.0",
     "react": "^18.0.0",
+    "react-aws-s3": "^1.5.0",
     "react-dom": "^18.0.0",
+    "react-s3": "^1.3.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
